# onboard-plasmoid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: compile.yml
cli/: CMakeLists.txt  main.cpp
libonboard/: CMakeLists.txt  Log.cpp  Log.h  Onboard.cpp  Onboard.h  global.h
libonboard/model/: Connectivity.h  CurrentTrip.h  DelayReason.h  IDeserializable.cpp  IDeserializable.h  Station.h  Status.h  Stop.h  StopInfo.h  StopTimetable.h  Track.h  Trip.h  TripStopInfo.h
libonboard/network/: OnboardApiClient.cpp  OnboardApiClient.h
plasmoid/: CMakeLists.txt  testing.md
plasmoid/cmake/templates/: metadata.desktop.in  metadata.json.in
plasmoid/lib/: CMakeLists.txt  OnboardApplet.cpp  OnboardApplet.h  Utils.cpp  Utils.h  global.h
plasmoid/lib/resources/: body.appdata.xml
plasmoid/package5/contents/config/: config.qml  main.xml
plasmoid/package5/contents/ui/: CompactRepresentation.qml  ConfigGeneral.qml  ConfigTestMode.qml  IconChooser.qml  ToolTipView.qml  main.qml
plasmoid/scripts/: settestenv.sh
plasmoid/translations/: onboardplasmoid_de_DE.ts  onboardplasmoid_en_US.ts
